--- a/css/master.css
+++ b/css/master.css
@@ -737,17 +737,29 @@ section.project-grid {
     background-color: #232431;
     grid-column: 1/3;
     grid-row: 1/2;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/swish/swish-project.png");
+    background-repeat: no-repeat;
+    background-position: 90% 100%;
+    background-size: 35%; }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
     grid-row: 2/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/milya/milya-project.png");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center center; }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
     grid-row: 2/3;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/illustrations/illustration-project.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: bottom center; }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -1232,17 +1244,29 @@ section.project-grid {
     background-color: #232431;
     grid-column: 1/3;
     grid-row: 1/2;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/swish/swish-project.png");
+    background-repeat: no-repeat;
+    background-position: 90% 100%;
+    background-size: 35%; }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
     grid-row: 2/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/milya/milya-project.png");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center center; }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
     grid-row: 2/3;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/illustrations/illustration-project.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: bottom center; }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -2122,17 +2146,29 @@ section.project-grid {
     background-color: #232431;
     grid-column: 1/3;
     grid-row: 1/2;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/swish/swish-project.png");
+    background-repeat: no-repeat;
+    background-position: 90% 100%;
+    background-size: 35%; }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
     grid-row: 2/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/milya/milya-project.png");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center center; }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
     grid-row: 2/3;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/illustrations/illustration-project.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: bottom center; }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -3427,17 +3463,29 @@ section.project-grid {
     background-color: #232431;
     grid-column: 1/3;
     grid-row: 1/2;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/swish/swish-project.png");
+    background-repeat: no-repeat;
+    background-position: 90% 100%;
+    background-size: 35%; }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
     grid-row: 2/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/milya/milya-project.png");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center center; }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
     grid-row: 2/3;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/illustrations/illustration-project.png");
+    background-repeat: no-repeat;
+    background-size: 40%;
+    background-position: bottom center; }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
