--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -4,6 +4,32 @@
 @import 'layout';
 
 
+section.home-grid{
+margin: 1em 0 0 0;
+width: 100%;
+height: 700px;
+display:grid;
+grid-template-columns: repeat(3, 1fr);
+align-items: center;
+@include for-tablet-portait-up{
+  height:500px;
+  width: 95%;
+}
+.homebox{
+  //border: 1px solid red;
+  grid-column: 1/3;
+  padding-left: 2em;
+  @include for-tablet-portait-up{
+    grid-column: 1/4;
+    padding-left: 0;
+  }
+  @include for-tablet-landscape-up{
+    grid-column: 1/4;
+  }
+}
+}
+
+
 section.project-grid{
 margin: 0em 0 2em 0;
 width:100%;
@@ -13,9 +39,10 @@ grid-template-columns: repeat(2, 1fr);
 grid-template-rows: 640px repeat(2, 400px);
 grid-gap: 25px;
 @include for-tablet-portait-up{
+  height: 1500px;
   width: 95%;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 500px);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 350px);
 }
 .project-swish{
   background-color: $swish-background;
@@ -26,6 +53,11 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-position: 90% 100%;
   background-size: 35%;
+  @include for-tablet-portait-up{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    background-size: 50%;
+  }
 }
 .project-milya{
   background-color: $milya;
@@ -36,6 +68,11 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: center center;
+  @include for-tablet-portait-up{
+    grid-column: 1/3;
+    grid-row: 2/3;
+    background-size: 30%;
+  }
 }
 .project-illustration{
   background-color: $illustration-navy;
@@ -46,12 +83,21 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-size: 40%;
   background-position: bottom center;
+  @include for-tablet-portait-up{
+    grid-column: 1/3;
+    grid-row: 3/4;
+    background-size: 50%;
+  }
 }
 .project-movingposter{
   background-color: $posters;
   grid-column: 2/3;
   grid-row: 3/4;
   cursor: pointer;
+  @include for-tablet-portait-up{
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
 }
 
 
