--- a/css/master.css
+++ b/css/master.css
@@ -824,12 +824,18 @@ section.project-grid {
     background-image: url("/img/swish/swish-project.png");
     background-repeat: no-repeat;
     background-position: 90% 100%;
-    background-size: 35%; }
+    background-size: 35%;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-swish {
         grid-column: 1/3;
         grid-row: 1/2;
         background-size: 50%; } }
+  section.project-grid .project-swish:hover {
+    background-size: 36%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-swish:hover {
+        background-size: 51%; } }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
@@ -838,12 +844,21 @@ section.project-grid {
     background-image: url("/img/milya/milya-project.png");
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: center center; }
+    background-position: center center;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-milya {
         grid-column: 1/3;
         grid-row: 2/3;
         background-size: 30%; } }
+  section.project-grid .box:hover .milya-overlay {
+    opacity: 1; }
+  section.project-grid .project-milya:hover {
+    opacity: 10%;
+    background-size: 52%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-milya:hover {
+        background-size: 32%; } }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
@@ -852,12 +867,18 @@ section.project-grid {
     background-image: url("/img/illustrations/illustration-project.png");
     background-repeat: no-repeat;
     background-size: 40%;
-    background-position: bottom center; }
+    background-position: bottom center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
       section.project-grid .project-illustration {
         grid-column: 1/3;
         grid-row: 3/4;
         background-size: 50%; } }
+  section.project-grid .project-illustration:hover {
+    background-size: 42%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-illustration:hover {
+        background-size: 52%; } }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -867,6 +888,16 @@ section.project-grid {
       section.project-grid .project-movingposter {
         grid-column: 1/3;
         grid-row: 4/5; } }
+  section.project-grid .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    transition: 0.5s ease;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -1418,12 +1449,18 @@ section.project-grid {
     background-image: url("/img/swish/swish-project.png");
     background-repeat: no-repeat;
     background-position: 90% 100%;
-    background-size: 35%; }
+    background-size: 35%;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-swish {
         grid-column: 1/3;
         grid-row: 1/2;
         background-size: 50%; } }
+  section.project-grid .project-swish:hover {
+    background-size: 36%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-swish:hover {
+        background-size: 51%; } }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
@@ -1432,12 +1469,21 @@ section.project-grid {
     background-image: url("/img/milya/milya-project.png");
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: center center; }
+    background-position: center center;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-milya {
         grid-column: 1/3;
         grid-row: 2/3;
         background-size: 30%; } }
+  section.project-grid .box:hover .milya-overlay {
+    opacity: 1; }
+  section.project-grid .project-milya:hover {
+    opacity: 10%;
+    background-size: 52%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-milya:hover {
+        background-size: 32%; } }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
@@ -1446,12 +1492,18 @@ section.project-grid {
     background-image: url("/img/illustrations/illustration-project.png");
     background-repeat: no-repeat;
     background-size: 40%;
-    background-position: bottom center; }
+    background-position: bottom center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
       section.project-grid .project-illustration {
         grid-column: 1/3;
         grid-row: 3/4;
         background-size: 50%; } }
+  section.project-grid .project-illustration:hover {
+    background-size: 42%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-illustration:hover {
+        background-size: 52%; } }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -1461,6 +1513,16 @@ section.project-grid {
       section.project-grid .project-movingposter {
         grid-column: 1/3;
         grid-row: 4/5; } }
+  section.project-grid .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    transition: 0.5s ease;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -2422,12 +2484,18 @@ section.project-grid {
     background-image: url("/img/swish/swish-project.png");
     background-repeat: no-repeat;
     background-position: 90% 100%;
-    background-size: 35%; }
+    background-size: 35%;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-swish {
         grid-column: 1/3;
         grid-row: 1/2;
         background-size: 50%; } }
+  section.project-grid .project-swish:hover {
+    background-size: 36%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-swish:hover {
+        background-size: 51%; } }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
@@ -2436,12 +2504,21 @@ section.project-grid {
     background-image: url("/img/milya/milya-project.png");
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: center center; }
+    background-position: center center;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-milya {
         grid-column: 1/3;
         grid-row: 2/3;
         background-size: 30%; } }
+  section.project-grid .box:hover .milya-overlay {
+    opacity: 1; }
+  section.project-grid .project-milya:hover {
+    opacity: 10%;
+    background-size: 52%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-milya:hover {
+        background-size: 32%; } }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
@@ -2450,12 +2527,18 @@ section.project-grid {
     background-image: url("/img/illustrations/illustration-project.png");
     background-repeat: no-repeat;
     background-size: 40%;
-    background-position: bottom center; }
+    background-position: bottom center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
       section.project-grid .project-illustration {
         grid-column: 1/3;
         grid-row: 3/4;
         background-size: 50%; } }
+  section.project-grid .project-illustration:hover {
+    background-size: 42%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-illustration:hover {
+        background-size: 52%; } }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -2465,6 +2548,16 @@ section.project-grid {
       section.project-grid .project-movingposter {
         grid-column: 1/3;
         grid-row: 4/5; } }
+  section.project-grid .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    transition: 0.5s ease;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -3871,12 +3964,18 @@ section.project-grid {
     background-image: url("/img/swish/swish-project.png");
     background-repeat: no-repeat;
     background-position: 90% 100%;
-    background-size: 35%; }
+    background-size: 35%;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-swish {
         grid-column: 1/3;
         grid-row: 1/2;
         background-size: 50%; } }
+  section.project-grid .project-swish:hover {
+    background-size: 36%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-swish:hover {
+        background-size: 51%; } }
   section.project-grid .project-milya {
     background-color: #422FFA;
     grid-column: 1/2;
@@ -3885,12 +3984,21 @@ section.project-grid {
     background-image: url("/img/milya/milya-project.png");
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: center center; }
+    background-position: center center;
+    transition: 0.5s ease; }
     @media (max-width: 768px) {
       section.project-grid .project-milya {
         grid-column: 1/3;
         grid-row: 2/3;
         background-size: 30%; } }
+  section.project-grid .box:hover .milya-overlay {
+    opacity: 1; }
+  section.project-grid .project-milya:hover {
+    opacity: 10%;
+    background-size: 52%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-milya:hover {
+        background-size: 32%; } }
   section.project-grid .project-illustration {
     background-color: #080150;
     grid-column: 2/3;
@@ -3899,12 +4007,18 @@ section.project-grid {
     background-image: url("/img/illustrations/illustration-project.png");
     background-repeat: no-repeat;
     background-size: 40%;
-    background-position: bottom center; }
+    background-position: bottom center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
       section.project-grid .project-illustration {
         grid-column: 1/3;
         grid-row: 3/4;
         background-size: 50%; } }
+  section.project-grid .project-illustration:hover {
+    background-size: 42%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-illustration:hover {
+        background-size: 52%; } }
   section.project-grid .project-movingposter {
     background-color: #EBEBEB;
     grid-column: 2/3;
@@ -3914,6 +4028,16 @@ section.project-grid {
       section.project-grid .project-movingposter {
         grid-column: 1/3;
         grid-row: 4/5; } }
+  section.project-grid .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    transition: 0.5s ease;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
