--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -15,6 +15,8 @@ $milya:#422FFA;
 $swish:#383838;
 $posters:#EBEBEB;
 $swish-background: #232431;
+$overlay:rgba(0,0,0,0.5);
+
 
 //---Illustration Colours---//
 
