--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -29,7 +29,6 @@ align-items: center;
 }
 }
 
-
 section.project-grid{
 margin: 0em 0 2em 0;
 width:100%;
@@ -53,12 +52,23 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-position: 90% 100%;
   background-size: 35%;
+  transition: 0.5s ease;
   @include for-tablet-portait-up{
     grid-column: 1/3;
     grid-row: 1/2;
     background-size: 50%;
   }
+
 }
+
+.project-swish:hover{
+  background-size:36%;
+@include for-tablet-portait-up{
+  background-size: 51%;
+}
+
+}
+
 .project-milya{
   background-color: $milya;
   grid-column: 1/2;
@@ -68,12 +78,26 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: center center;
+  transition: 0.5s ease;
   @include for-tablet-portait-up{
     grid-column: 1/3;
     grid-row: 2/3;
     background-size: 30%;
   }
 }
+
+.box:hover .milya-overlay{
+  opacity: 1;
+}
+
+.project-milya:hover {
+  opacity: 10%;
+  background-size: 52%;
+  @include for-tablet-portait-up{
+    background-size: 32%;
+  }
+}
+
 .project-illustration{
   background-color: $illustration-navy;
   grid-column: 2/3;
@@ -83,12 +107,21 @@ grid-gap: 25px;
   background-repeat: no-repeat;
   background-size: 40%;
   background-position: bottom center;
+    transition: 0.5s;
   @include for-tablet-portait-up{
     grid-column: 1/3;
     grid-row: 3/4;
     background-size: 50%;
   }
 }
+  .project-illustration:hover{
+    background-size:42%;
+    @include for-tablet-portait-up{
+      background-size: 52%;
+    }
+  }
+
+
 .project-movingposter{
   background-color: $posters;
   grid-column: 2/3;
@@ -98,6 +131,19 @@ grid-gap: 25px;
     grid-column: 1/3;
     grid-row: 4/5;
   }
+}
+
+
+.overlay{
+  width:100%;
+  height:100%;
+  background-color:$overlay;
+  display: none;
+  transition: 0.5s ease;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
 }
 
 
