adds airmax box

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -8,6 +8,7 @@ $link-hover:#FF3769;
 $white:#FFFFFF;
 $place-holder: #EBEBEB;
 $list-grey: #C3C3C3;
+$overlay:rgba(0,0,0,0.5);
 
 //----Project Colours---//
 
@@ -15,7 +16,7 @@ $milya:#422FFA;
 $swish:#383838;
 $posters:#EBEBEB;
 $swish-background: #232431;
-$overlay:rgba(0,0,0,0.5);
+$nike-background: #232323;
 
 
 //---Illustration Colours---//
