--- a/css/master.css
+++ b/css/master.css
@@ -879,25 +879,40 @@ section.project-grid {
     @media (max-width: 768px) {
       section.project-grid .project-illustration:hover {
         background-size: 52%; } }
-  section.project-grid .project-movingposter {
-    background-color: #EBEBEB;
+  section.project-grid .project-airmax {
+    background-color: #080150;
     grid-column: 2/3;
     grid-row: 3/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/nike/nike-project.png");
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
-      section.project-grid .project-movingposter {
+      section.project-grid .project-airmax {
+        grid-column: 1/3;
+        grid-row: 4/5;
+        background-size: 70%; } }
+  section.project-grid .project-airmax {
+    background-image: url("/img/nike/project-nike3.png");
+    background-color: #232323;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    transition: 0.5s; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax {
         grid-column: 1/3;
         grid-row: 4/5; } }
-  section.project-grid .overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    transition: 0.5s ease;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; }
+  section.project-grid .project-airmax:hover {
+    background-size: 102%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax:hover {
+        background-size: 90%; } }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -1504,25 +1519,40 @@ section.project-grid {
     @media (max-width: 768px) {
       section.project-grid .project-illustration:hover {
         background-size: 52%; } }
-  section.project-grid .project-movingposter {
-    background-color: #EBEBEB;
+  section.project-grid .project-airmax {
+    background-color: #080150;
     grid-column: 2/3;
     grid-row: 3/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/nike/nike-project.png");
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
-      section.project-grid .project-movingposter {
+      section.project-grid .project-airmax {
+        grid-column: 1/3;
+        grid-row: 4/5;
+        background-size: 70%; } }
+  section.project-grid .project-airmax {
+    background-image: url("/img/nike/project-nike3.png");
+    background-color: #232323;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    transition: 0.5s; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax {
         grid-column: 1/3;
         grid-row: 4/5; } }
-  section.project-grid .overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    transition: 0.5s ease;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; }
+  section.project-grid .project-airmax:hover {
+    background-size: 102%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax:hover {
+        background-size: 90%; } }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -2539,25 +2569,40 @@ section.project-grid {
     @media (max-width: 768px) {
       section.project-grid .project-illustration:hover {
         background-size: 52%; } }
-  section.project-grid .project-movingposter {
-    background-color: #EBEBEB;
+  section.project-grid .project-airmax {
+    background-color: #080150;
     grid-column: 2/3;
     grid-row: 3/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/nike/nike-project.png");
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
-      section.project-grid .project-movingposter {
+      section.project-grid .project-airmax {
+        grid-column: 1/3;
+        grid-row: 4/5;
+        background-size: 70%; } }
+  section.project-grid .project-airmax {
+    background-image: url("/img/nike/project-nike3.png");
+    background-color: #232323;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    transition: 0.5s; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax {
         grid-column: 1/3;
         grid-row: 4/5; } }
-  section.project-grid .overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    transition: 0.5s ease;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; }
+  section.project-grid .project-airmax:hover {
+    background-size: 102%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax:hover {
+        background-size: 90%; } }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -4019,25 +4064,40 @@ section.project-grid {
     @media (max-width: 768px) {
       section.project-grid .project-illustration:hover {
         background-size: 52%; } }
-  section.project-grid .project-movingposter {
-    background-color: #EBEBEB;
+  section.project-grid .project-airmax {
+    background-color: #080150;
     grid-column: 2/3;
     grid-row: 3/4;
-    cursor: pointer; }
+    cursor: pointer;
+    background-image: url("/img/nike/nike-project.png");
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: center;
+    transition: 0.5s; }
     @media (max-width: 768px) {
-      section.project-grid .project-movingposter {
+      section.project-grid .project-airmax {
+        grid-column: 1/3;
+        grid-row: 4/5;
+        background-size: 70%; } }
+  section.project-grid .project-airmax {
+    background-image: url("/img/nike/project-nike3.png");
+    background-color: #232323;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    transition: 0.5s; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax {
         grid-column: 1/3;
         grid-row: 4/5; } }
-  section.project-grid .overlay {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    transition: 0.5s ease;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0; }
+  section.project-grid .project-airmax:hover {
+    background-size: 102%; }
+    @media (max-width: 768px) {
+      section.project-grid .project-airmax:hover {
+        background-size: 90%; } }
 
 body {
   font-family: 'Inter UI', sans-serif; }
