--- a/scss/master.scss
+++ b/scss/master.scss
@@ -7,6 +7,9 @@
 @import "swish";
 @import "milya";
 @import "info";
+@import "airmax";
+
+
 html{
   background-color: $background-grey;
   margin: 0;
