--- a/css/master.css
+++ b/css/master.css
@@ -4471,19 +4471,68 @@ section.illustration-splash {
       grid-template-rows: repeat(2, 100px); } }
 
 section.nike-splash {
-  margin: 7em 0 2em 0;
+  margin: 7em 0 0 0;
   display: grid;
   width: 100%;
-  height: 1000px;
+  height: 950px;
   grid-template-columns: 1fr;
   grid-template-rows: 800px; }
+  section.nike-splash .nike-splash-box {
+    background-color: #232323; }
 
 section.nike-grid {
+  border-top: 1px solid #232431;
   display: grid;
   width: 100%;
-  height: 1680px;
+  height: 3360px;
+  grid-gap: 25px 25px;
   grid-template-columns: auto;
-  grid-template-rows: auto; }
+  grid-template-rows: repeat(2, 400px) 800px repeat(2, 400px) 800px; }
+  section.nike-grid .nike-default {
+    background-color: #232323;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center; }
+  section.nike-grid .nike-box-s1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    background-image: url(); }
+  section.nike-grid .nike-box-s2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    background-image: url(); }
+  section.nike-grid .nike-box-s3 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-image: url(); }
+  section.nike-grid .nike-box-s4 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-image: url(); }
+  section.nike-grid .nike-box-s5 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    background-image: url(); }
+  section.nike-grid .nike-box-s6 {
+    grid-column: 2/3;
+    grid-row: 5/6;
+    background-image: url(); }
+  section.nike-grid .nike-box-s7 {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    background-image: url(); }
+  section.nike-grid .nike-box-s8 {
+    grid-column: 2/3;
+    grid-row: 6/7;
+    background-image: url(); }
+  section.nike-grid .nike-box-l1 {
+    grid-column: 1/3;
+    grid-row: 3/5;
+    background-image: url(); }
+  section.nike-grid .nike-box-l2 {
+    grid-column: 1/3;
+    grid-row: 7/9;
+    background-image: url(); }
 
 html {
   background-color: #F7F7F7;
