--- a/scss/_airmax.scss
+++ b/scss/_airmax.scss
@@ -16,21 +16,80 @@ width: 100%;
 
 
 section.nike-splash{
-  margin: 7em 0 2em 0;
+  margin: 7em 0 0 0;
   display: grid;
   width: 100%;
-  height: 1000px;
+  height: 950px;
   grid-template-columns: 1fr;
   grid-template-rows: 800px;
   .nike-splash-box{
+    background-color: $nike-background;
   }
 }
 
 section.nike-grid{
+  border-top: 1px solid $default-text;
   display: grid;
   width:  100%;
-  height: 1680px;
+  height: 3360px;
+  grid-gap:25px 25px;
   grid-template-columns:auto;
-  grid-template-rows:auto;
+  grid-template-rows:repeat(2, 400px) 800px repeat(2, 400px) 800px;
+  .nike-default{
+    background-color: $nike-background;
+    width:100%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
+  .nike-box-s1{
+    grid-column:1/2 ;
+    grid-row: 1/2;
+    background-image: url();
+  }
+  .nike-box-s2{
+    grid-column:2/3 ;
+    grid-row: 1/2;
+    background-image: url();
+  }
+  .nike-box-s3{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-image: url();
+  }
+  .nike-box-s4{
+    grid-column: 2/3;
+    grid-row:2/3;
+    background-image: url();
+  }
+  .nike-box-s5{
+    grid-column:1/2 ;
+    grid-row: 5/6;
+    background-image: url();
+  }
+  .nike-box-s6{
+    grid-column:2/3;
+    grid-row:5/6;
+    background-image: url();
+  }
+  .nike-box-s7{
+    grid-column:1/2;
+    grid-row:6/7;
+    background-image: url();
+  }
+  .nike-box-s8{
+    grid-column: 2/3;
+    grid-row:6/7;
+    background-image: url();
+  }
+  .nike-box-l1{
+    grid-column:1/3 ;
+    grid-row:3/5;
+    background-image: url();
+  }
+  .nike-box-l2{
+    grid-column:1/3 ;
+    grid-row:7/9;
+    background-image: url();
+  }
 }
