--- a/css/master.css
+++ b/css/master.css
@@ -4475,19 +4475,31 @@ section.nike-splash {
   display: grid;
   width: 100%;
   height: 950px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 800px; }
+  grid-template-columns: 2fr repeat(2, 1fr);
+  grid-template-rows: 160px 800px; }
+  section.nike-splash .nike-title {
+    grid-row: 1/2;
+    grid-column: 1/2; }
+  section.nike-splash .nike-description {
+    grid-row: 1/2;
+    grid-column: 3/4; }
   section.nike-splash .nike-splash-box {
+    grid-row: 2/3;
+    grid-column: 1/4;
     background-color: #232323; }
 
 section.nike-grid {
+  padding-top: 2em;
   border-top: 1px solid #232431;
   display: grid;
   width: 100%;
-  height: 3360px;
+  height: 3380px;
   grid-gap: 25px 25px;
   grid-template-columns: auto;
-  grid-template-rows: repeat(2, 400px) 800px repeat(2, 400px) 800px; }
+  grid-template-rows: repeat(8, 400px); }
+  @media (max-width: 768px) {
+    section.nike-grid {
+      grid-template-columns: 1fr; } }
   section.nike-grid .nike-default {
     background-color: #232323;
     width: 100%;
@@ -4497,42 +4509,74 @@ section.nike-grid {
     grid-column: 1/2;
     grid-row: 1/2;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s1 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s2 {
     grid-column: 2/3;
     grid-row: 1/2;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s2 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s3 {
     grid-column: 1/2;
     grid-row: 2/3;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s3 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s4 {
     grid-column: 2/3;
     grid-row: 2/3;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s4 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s5 {
     grid-column: 1/2;
     grid-row: 5/6;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s5 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s6 {
     grid-column: 2/3;
     grid-row: 5/6;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s6 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s7 {
     grid-column: 1/2;
     grid-row: 6/7;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s7 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-s8 {
     grid-column: 2/3;
     grid-row: 6/7;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-s8 {
+        grid-column: 1/2; } }
   section.nike-grid .nike-box-l1 {
     grid-column: 1/3;
     grid-row: 3/5;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-l1 {
+        grid-column: 1/2;
+        grid-row: 3/5; } }
   section.nike-grid .nike-box-l2 {
     grid-column: 1/3;
     grid-row: 7/9;
     background-image: url(); }
+    @media (max-width: 768px) {
+      section.nike-grid .nike-box-l2 {
+        grid-column: 1/2;
+        grid-row: 7/8; } }
 
 html {
   background-color: #F7F7F7;
