--- a/scss/_airmax.scss
+++ b/scss/_airmax.scss
@@ -20,21 +20,35 @@ section.nike-splash{
   display: grid;
   width: 100%;
   height: 950px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 800px;
+  grid-template-columns:2fr repeat(2, 1fr);
+  grid-template-rows: 160px 800px;
+  .nike-title{
+    grid-row:1/2;
+    grid-column: 1/2;
+  }
+  .nike-description{
+    grid-row:1/2;
+    grid-column: 3/4;
+  }
   .nike-splash-box{
+    grid-row:2/3;
+    grid-column: 1/4;
     background-color: $nike-background;
   }
 }
 
 section.nike-grid{
+  padding-top: 2em;
   border-top: 1px solid $default-text;
   display: grid;
   width:  100%;
-  height: 3360px;
+  height: 3380px;
   grid-gap:25px 25px;
   grid-template-columns:auto;
-  grid-template-rows:repeat(2, 400px) 800px repeat(2, 400px) 800px;
+  grid-template-rows:repeat(8, 400px);
+  @include for-tablet-portait-up{
+    grid-template-columns: 1fr;
+  }
   .nike-default{
     background-color: $nike-background;
     width:100%;
@@ -46,50 +60,82 @@ section.nike-grid{
     grid-column:1/2 ;
     grid-row: 1/2;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s2{
     grid-column:2/3 ;
     grid-row: 1/2;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s3{
     grid-column: 1/2;
     grid-row: 2/3;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s4{
     grid-column: 2/3;
     grid-row:2/3;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s5{
     grid-column:1/2 ;
     grid-row: 5/6;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s6{
     grid-column:2/3;
     grid-row:5/6;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s7{
     grid-column:1/2;
     grid-row:6/7;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-s8{
     grid-column: 2/3;
     grid-row:6/7;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+    }
   }
   .nike-box-l1{
     grid-column:1/3 ;
     grid-row:3/5;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+      grid-row:3/5;
+    }
   }
   .nike-box-l2{
     grid-column:1/3 ;
     grid-row:7/9;
     background-image: url();
+    @include for-tablet-portait-up{
+      grid-column: 1/2;
+      grid-row:7/8;
+    }
   }
 }
