--- a/css/master.css
+++ b/css/master.css
@@ -3454,16 +3454,30 @@ li.biolist {
     font-size: 16px; }
 
 section.milya-splash-box {
+  margin: 7em 0 1em 0;
   width: 100%;
   height: 960px;
   display: grid;
-  grid-template-columns: 2fr repeat(2, 1fr);
+  grid-template-columns: 2fr repeat(2, 350px);
+  grid-column-gap: 25px;
   grid-template-rows: 160px 800px; }
   @media (max-width: 768px) {
     section.milya-splash-box {
       width: 95%;
       grid-template-columns: 1fr;
       grid-template-rows: repeat(2, 100px) 400px; } }
+  section.milya-splash-box .milya-splash {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    background-color: #422FFA; }
+
+section.milya-overview {
+  margin: 3em 0 1em 0;
+  width: 100%;
+  height: 600px;
+  display: grid;
+  grid-template-columns: 3fr 4fr;
+  grid-template-rows: 1fr 1fr; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
