--- a/scss/_milya.scss
+++ b/scss/_milya.scss
@@ -34,6 +34,90 @@ section.milya-overview{
   display:grid;
   grid-template-columns: 3fr 4fr;
   grid-template-rows: 1fr 1fr;
+  grid-gap:25px;
   .milya-ov-title{}
   .milya-ov-para{}
+}
+
+section.milya-problem{
+  padding-top: 1.5em;
+  border-top: 1px solid $default-text;
+  margin:3em 0 1em 0;
+  width: 100%;
+  height:420px;
+  display:grid;
+  grid-column-gap:25px;
+  grid-template-columns: 1fr repeat(2, 450px);
+  .milya-title{}
+  .milya-description{
+    li{
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
+  }
+}
+
+
+section.milya-personas{
+  padding-top: 1.5em;
+  border-top: 1px solid $default-text;
+  margin: 3em 0 1em 0;
+  width: 100%;
+  height:1900px;
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 100px  repeat(3, 500px);
+  grid-gap:35px;
+  .milya-persona-title{
+    grid-column-start:1;
+    grid-column-end: 3;
+  }
+  .milya-persona-card{
+    display:grid;
+    grid-column-gap:25px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100px 2fr;
+    padding: 2em;
+    background-color: $white;
+    z-index: 20;
+    -webkit-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    -moz-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+
+    .milya-card-name{
+
+      display:inline-block;
+      grid-column-start: 1;
+      grid-column-end: 3;
+      .persona-img{
+        width:100px;
+        height:100px;
+      }
+    #jessica{
+      background-image: url('../img/milya/personas/jessica.png');
+    }
+    #johncarlo{
+      background-image: url('../img/milya/personas/johncarlo.png');
+    }
+    #eric{
+      background-image: url('../img/milya/personas/eric.png');
+    }
+    #herman{
+      background-image: url('../img/milya/personas/herman.png');
+    }
+    #theressa{
+      background-image: url('../img/milya/personas/theressa.png');
+    }
+
+    }
+    .milya-card-description{
+      //border:1px solid red;
+      li{
+        margin-top: 1em;
+        margin-bottom: 1em;
+      }
+    }
+
+  }
+
 }
