--- a/scss/_milya.scss
+++ b/scss/_milya.scss
@@ -39,12 +39,18 @@ section.milya-overview{
   .milya-ov-para{}
 }
 
+section.milya-problem-d{
+  height:420px;
+}
+section.milya-problem-s{
+  height:280px;
+}
+
 section.milya-problem{
   padding-top: 1.5em;
   border-top: 1px solid $default-text;
   margin:3em 0 1em 0;
   width: 100%;
-  height:420px;
   display:grid;
   grid-column-gap:25px;
   grid-template-columns: 1fr repeat(2, 450px);
@@ -57,13 +63,32 @@ section.milya-problem{
   }
 }
 
+section.milya-product-map{
+  margin: 3em 0 5em 0;
+  border-top: 1px solid $default-text;
+  width: 100%;
+  height:975px;
+  padding-top:1.5em;
+  display:grid;
+  grid-template-rows: 100px 800px;
+  grid-row-gap:55px;
+  .milya-title{}
+  .milya-product-box{
+    margin-bottom: 1em;
+    background-image: url('../img/milya/milya-product-map.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
 
 section.milya-personas{
   padding-top: 1.5em;
   border-top: 1px solid $default-text;
   margin: 3em 0 1em 0;
   width: 100%;
-  height:1900px;
+  height:1800px;
   display:grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 100px  repeat(3, 500px);
@@ -75,6 +100,7 @@ section.milya-personas{
   .milya-persona-card{
     display:grid;
     grid-column-gap:25px;
+    grid-row-gap: 1em;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 100px 2fr;
     padding: 2em;
@@ -85,8 +111,10 @@ section.milya-personas{
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
 
     .milya-card-name{
-
-      display:inline-block;
+      display:flex;
+      flex-direction:row;
+      justify-content: left;
+      align-items: center;
       grid-column-start: 1;
       grid-column-end: 3;
       .persona-img{
@@ -94,18 +122,48 @@ section.milya-personas{
         height:100px;
       }
     #jessica{
+      margin-right: 1em;
+      height:100px;
+      width: 100px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
       background-image: url('../img/milya/personas/jessica.png');
     }
     #johncarlo{
+      margin-right: 1em;
+      height:100px;
+      width: 100px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
       background-image: url('../img/milya/personas/johncarlo.png');
     }
     #eric{
+      margin-right: 1em;
+      height:100px;
+      width: 100px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
       background-image: url('../img/milya/personas/eric.png');
     }
     #herman{
+      margin-right: 1em;
+      height:100px;
+      width: 100px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
       background-image: url('../img/milya/personas/herman.png');
     }
     #theressa{
+      margin-right: 1em;
+      height:100px;
+      width: 100px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
       background-image: url('../img/milya/personas/theressa.png');
     }
 
