--- a/scss/_illustrations.scss
+++ b/scss/_illustrations.scss
@@ -204,16 +204,123 @@ section.illustration-1password{
   }
   .agile1{
     background-color:$password-blue;
-
+    background-image: url('../img/illustrations/1pass1.png');
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   .agile2{
     background-color:$password-blue;
+    background-image: url('../img/illustrations/1pass2.png');
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   .agile3{
     background-color:$password-blue;
+    background-image: url('../img/illustrations/1pass3.png');
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   .agile4{
     background-color:$password-blue;
+    background-image: url('../img/illustrations/1pass4.png');
+    background-size: 40%;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
+}
+
+
+#idtheft1{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-image:url('../img/illustrations/idtheft1.png');
+}
+#idtheft1{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 55%;
+  background-image:url('../img/illustrations/idtheft2.png');
+}
+#idtheft3{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 55%;
+  background-image:url('../img/illustrations/idtheft3.png');
+}
+#esports1{
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size:60%;
+  background-image:url('../img/illustrations/esports1.png');
+}
+#esports2{
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-image:url('../img/illustrations/esports2.png');
+}
+#esports3{
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-image:url('../img/illustrations/esports3.png');
+}
+#esports4{
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-image:url('../img/illustrations/esports4.png');
+}
+#esports5{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/esports5.png');
+}
+#esports6{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/esports6.png');
+}
+#legup{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/legup.png');
+}
+#editorial{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/editorial.png');
+}
+#1pass1{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/1pass1.png');
+}
+#1pass2{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/1pass2.png');
+}
+#1pass3{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/1pass3.png');
+}
+#1pass4{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image:url('../img/illustrations/1pass4.png');
 }
