finishes illustration page

--- a/scss/_illustrations.scss
+++ b/scss/_illustrations.scss
@@ -252,6 +252,7 @@ section.illustration-1password{
   background-size: 55%;
   background-image:url('../img/illustrations/theft3.png');
 }
+//----E-Sports----//
 #esports1{
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -271,29 +272,31 @@ section.illustration-1password{
   background-image:url('../img/illustrations/esports3.png');
 }
 #esports4{
-  background-position: center bottom;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 70%;
+  background-size: 35%;
   background-image:url('../img/illustrations/esports4.png');
 }
 #esports5{
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 35%;
   background-image:url('../img/illustrations/esports5.png');
 }
 #esports6{
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 90%;
   background-image:url('../img/illustrations/esports6.png');
 }
+//-----Leg Up----//
 #legup{
   background-position: center;
   background-repeat: no-repeat;
   background-size: 60%;
   background-image:url('../img/illustrations/legup.png');
 }
+//----Editorial----//
 #editorial{
   background-position: center;
   background-repeat: no-repeat;
